force-app/main/default/objects/ERP_Invoice_Detail__c/ERP_Invoice_Detail__c.object-meta.xml
<CustomObject>
    <description>This will store the invoice details, sent from the ERP application</description>
    <label>ERP Invoice Detail</label>
    <nameField>
        <displayFormat>ID-{YYYY}{MM}-{0}</displayFormat>
        <label>ERP Invoice Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Invoice Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>