force-app/main/default/objects/ERP_Invoice_Detail__c/fields/Account_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Account_Distribution__c</fullName>
    <label>Account Distribution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>