force-app/main/default/objects/ERP_Invoice_Detail__c/fields/Bill_To_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Customer_Id__c</fullName>
    <label>Bill To Customer Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>