force-app/main/default/objects/ERP_Invoice_Detail__c/fields/Invoice_Currency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Currency__c</fullName>
    <label>Invoice Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>