force-app/main/default/objects/ERP_Invoice_Detail__c/fields/Invoice_Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Total__c</fullName>
    <label>Invoice Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>