force-app/main/default/objects/ERP_Invoice_Detail__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>