force-app/main/default/objects/ERP_Invoice_Detail__c/fields/Legacy_Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Client_Number__c</fullName>
    <description>Stores the client number of the invoice in the legacy financial system</description>
    <inlineHelpText>Stores the client number of the invoice in the legacy financial system</inlineHelpText>
    <label>Legacy Client Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>