force-app/main/default/objects/ERP_Invoice_Detail__c/fields/Legacy_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Invoice_Date__c</fullName>
    <label>Legacy Invoice Date</label>
    <type>Date</type>
</CustomField>