force-app/main/default/objects/ERP_Invoice_Detail__c/fields/Legacy_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Invoice_Number__c</fullName>
    <label>Legacy Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>