force-app/main/default/objects/ERP_Invoice_Detail__c/fields/Line_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Type__c</fullName>
    <label>Line Item Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>