force-app/main/default/objects/ERP_Invoice_Detail__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <label>Line Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>