force-app/main/default/objects/ERP_Invoice_Detail__c/fields/Line_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Amount__c</fullName>
    <label>Line Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>