force-app/main/default/objects/ERP_Invoice_Detail__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>