force-app/main/default/objects/ERP_Invoice_Detail__c/fields/Revenue_Date_for_OOP_Fees__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Date_for_OOP_Fees__c</fullName>
    <description>Revenue date for Admin fee, RFO and Pre Billed Expense.</description>
    <inlineHelpText>Revenue date for Admin fee, RFO and Pre Billed Expense.</inlineHelpText>
    <label>Revenue Date for OOP Fees</label>
    <type>DateTime</type>
</CustomField>